// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secret Details File Secret 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
      level="2"
    >
      overview
    </h2>
  </div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-huge StyledProps--padding-right-huge"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="switch"
        >
          <div
            class="item selected"
          >
            visual
          </div>
          <div
            class="item"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        style="width: 60%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              overview
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                name
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhi-file-1
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                description
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  file
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                identifier
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhifile1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Credentials
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Secret Type
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  File
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Secret Value
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-grey350"
                >
                  encryptedfile
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Secrets Manager
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  harnessSecretManager
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details SSH Secret with Key 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
      level="2"
    >
      overview
    </h2>
  </div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-huge StyledProps--padding-right-huge"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="switch"
        >
          <div
            class="item selected"
          >
            visual
          </div>
          <div
            class="item"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        style="width: 60%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              overview
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                name
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhi-ssh1
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                description
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  desc
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                identifier
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhissh1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Credentials
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Secret Type
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Execution Credential
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Authentication
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  SSH
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Credential Type
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Username/SSH Key
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Username
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhinav
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Key Reference
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhifile2
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Passphrase (optional)
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  account.abhitest1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-xxxlarge StyledProps--main StyledProps--border StyledProps--border-left StyledProps--padding-left-xxxlarge"
        style="width: 40%;"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main stats"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Connector created
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main nameValueItem"
          >
            <span
              class="name"
            >
              Last updated
            </span>
            <span
              class="value"
            >
              10/12/2020 02:26 pm
            </span>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main"
          style="width: 300px;"
        >
          <div
            class="OverlaySpinner--overlaySpinner"
          >
            <form
              class="FormikForm--main"
            >
              <div>
                <div
                  class="bp3-form-group"
                  data-id="host-0"
                >
                  <label
                    class="bp3-label"
                    for="host"
                  >
                    Add a Host Name to start verification
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="host"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--font-weight-bold"
                >
                  THIS URL WILL ONLY BE USED FOR VERIFICATION PROCESS
                </p>
                <button
                  class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--margin-top-medium"
                  style="font-size: smaller;"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    TEST CONNECTION
                  </span>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details SSH Secret with Key YAML 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
      level="2"
    >
      overview
    </h2>
  </div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-huge StyledProps--padding-right-huge"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="switch"
        >
          <div
            class="item"
          >
            visual
          </div>
          <div
            class="item selected"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main"
    >
      <div>
        yamlDiv
      </div>
    </div>
  </div>
</div>
`;

exports[`Secret Details Text Secret 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main container standard StyledProps--flex StyledProps--padding-left-large StyledProps--padding-right-large"
  >
    <h2
      class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--color StyledProps--color-grey800 StyledProps--font-weight-bold"
      level="2"
    >
      overview
    </h2>
  </div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-left-huge StyledProps--padding-right-huge"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex"
      >
        <div
          class="switch"
        >
          <div
            class="item selected"
          >
            visual
          </div>
          <div
            class="item"
          >
            yaml
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
            icon="edit"
          >
            <svg
              data-icon="edit"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                edit
              </desc>
              <path
                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            editDetails
          </span>
        </button>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
        style="width: 60%;"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        >
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              overview
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                name
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhi-test-1
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                description
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  asd
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                identifier
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  abhitest1
                </span>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main detailsSection renderDetails"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--font-size-medium StyledProps--color StyledProps--color-grey700"
            >
              Credentials
            </p>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Secret Type
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Text
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Secret Value
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-grey350"
                >
                  encrypted
                </span>
              </div>
            </div>
            <div
              class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main detailsSectionRowWrapper StyledProps--padding-top-medium StyledProps--padding-bottom-medium"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                Secrets Manager
              </p>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main detailsSectionRow"
              >
                <span
                  class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--color StyledProps--color-black"
                >
                  Vault1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
